<resources>
    <string name="APP_NAME">Чайка</string>

    <string name="PHONE_TEXT">Номер телефона</string>
    <string name="PASSWORD_TEXT">Пароль</string>
    <string name="CONFIRM_PASSWORD_TEXT">Повторите пароль</string>
    <string name="GO_TO_AUTH_TEXT">Уже есть аккаунт? <b>Войдите</b></string>
    <string name="GO_TO_REGISTRATION_TEXT">Еще нет аккаунта? <b>Зарегистрируйтесь</b> </string>

    <string name="OUT_FROM_ACCOUNT_TEXT">Выйти из аккаунта</string>
    <string name="DELETE_ACCOUNT_TEXT">Удалить аккаунт</string>

    <string name="ENTER_BUTTON">Войти</string>
    <string name="REGISTRATION_BUTTON">Зарегестироваться</string>

    <string name="MSG_ERROR_SIZE_PASSWORD">Длина пароля менее 8 символов</string>
    <string name="MSG_ERROR_MISMATCH_PASSWORD">Пароли не совпадают</string>
    <string name="MSG_ERROR_EMPTY_FIELD">Некоторые поля пустые</string>
    <string name="MSG_ERROR_EMPTY_PHONE">Введите номер телефона</string>
    <string name="MSG_ERROR_EMPTY_PASSWORD">Введите пароль</string>
    <string name="MSG_ERROR_INVALID_SESSION">Неверный логин или пароль</string>
    <string name="MSG_ERROR_REGISTRATION_FAILED">Ошибка регистрации</string>
    <string name="MSG_ERROR_AUTO_AUTH_FAILED">Ошибка автоматического входа</string>
    <string name="MSG_ERROR_USER_DATA_FETCH">Ошибка получения данных</string>

    // Toolbar
    <string name="FIND_TOOLBAR">Поиск</string>
    <string name="RENT_TOOLBAR">Аренда</string>
    <string name="PROFILE_TOOLBAR">Профиль</string>


    <string name="TOTAL_PRICE_TEXT">Итого:</string>
    <string name="ORDER_TOTAL_PRICE_TEXT">К оплате:</string>
    <string name="EMPTY_ORDER_MESSAGE">Чтобы начать свое путешествие, выберите велосипед из нашего ассортимента.</string>
    <string name="EMPTY_ORDER_TITLE">Список заказов пуст</string>

    <string name="ADD_BUTTON">Добавить</string>
    <string name="PAY_BUTTON">Оплатить</string>
    <string name="GO_TO_CATALOG">Перейти в каталог</string>
    <string name="PAYMENT_TITLE">Выберите способ оплаты</string>
    <string name="CARD_PAYMENT_TITLE">Оплата картой</string>
    <string name="COMING_SOON_TITLE">Скоро будет доступно</string>
    <string name="CASH_PAYMENT_TITLE">Оплата наличными</string>
    <string name="CASH_PAYMENT_INFO_MESSAGE">Не забудьте оплатить заказ при получении</string>


    <string name="CONFIRM">Подтвердить</string>
    <string name="CANCEL">Отмена</string>
    <string name="YES">Да</string>
    <string name="NO">Нет</string>
    <string name="OK">Ок</string>
    <string name="CONFIRM_DELETE_TITLE">Подтверждение удаления</string>
    <string name="CONFIRM_DELETE_MESSAGE">Вы уверены, что хотите удалить?</string>
    <string name="ACTIVE_ORDER_TITLE">Активные аренды</string>
    <string name="COMING_ORDER_TITLE">Ближайшие аренды</string>


    <string name="NEW_ORDERS_FILTER">Выдать заказы</string>
    <string name="ACTIVE_ORDERS_FILTER">Активные аренды</string>
    <string name="CONFIRM_RETURN_BUTTON">Подтвердить возврат</string>
    <string name="AUTH_TITLE">Войдите, чтобы начать</string>
    <string name="REGISTRATION_TITLE">Создайте аккаунт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>